# camera-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
camera_client/: __init__.py  __main__.py  client.py  loading.py  script.py  utils.py
demo/: vis_camera_box.py  vis_coords_maps.py  vis_maps.py
